added audio for the game

--- a/angular.json
+++ b/angular.json
@@ -20,7 +20,12 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*.wav",
+                "input": "src/assets/audio",
+                "output": "/assets/audio/"
+              }
             ],
             "styles": [
               "src/styles.css"
@@ -87,7 +92,12 @@
             "karmaConfig": "karma.conf.js",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*.wav",
+                "input": "src/assets/audio",
+                "output": "/assets/audio/"
+              }
             ],
             "styles": [
               "src/styles.css"
